crates/keron-lang/tests/corpus/errors/parse/for_no_iterable.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: unexpected `e`, expected `"`
  --> 2:13
  |
2 | for x in { reconcile x }
  |             ^
